@@ -6,4 +6,4 @@ importFrom("digest", digest)
 importFrom("methods", show)
 export(caterpillar, caterpillarR, double2singlePrecision, Formula.translate, MacroScript1, MacroScript2, mlwin2bugs, predLines, predCurves, prior2macro, runMLwiN, sixway, trajectories, Untoggle, ws2foreign)
 exportClasses(mlwinfitIGLS, mlwinfitMCMC)
-exportMethods("[","[[","[<-","[[<-",summary, print, update)
+exportMethods("[","[[","[<-","[[<-",summary, print, update, coef, coefficients, vcov, df.residual, residuals, resid, fitted, fitted.values, predict, logLik)
